<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.savestudents.components.textInput.TextInputCustomView
        android:id="@+id/ti_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_name_account"
        app:helperText="@string/helper_name_account"
        app:layout_constraintTop_toTopOf="parent" />

    <com.savestudents.components.textInput.TextInputCustomView
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_email_account"
        app:helperText="@string/helper_email_account"
        app:layout_constraintTop_toBottomOf="@id/ti_name" />

    <com.savestudents.components.textInput.TextInputCustomView
        android:id="@+id/ti_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_date_account"
        app:helperText="@string/helper_date_account"
        app:layout_constraintTop_toBottomOf="@id/ti_email"
        app:mask="##/##/####" />
</androidx.constraintlayout.widget.ConstraintLayout>