<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountRegister.ui.AccountRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.savestudents.components.appbar.AppBarCustomView
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/register_title"
                app:layout_constraintTop_toTopOf="parent" />

            <com.savestudents.components.textInput.TextInputCustomView
                android:id="@+id/name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_name_account"
                app:helperText="@string/helper_name_account"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <com.savestudents.components.textInput.TextInputCustomView
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_email_account"
                app:helperText="@string/helper_email_account"
                app:layout_constraintTop_toBottomOf="@id/name_text_input" />

            <com.savestudents.components.textInput.TextInputCustomView
                android:id="@+id/date_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_date_account"
                app:helperText="@string/helper_date_account"
                app:layout_constraintTop_toBottomOf="@id/email_text_input" />

            <com.savestudents.components.textInput.TextInputCustomView
                android:id="@+id/institution_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_institution_account"
                app:helperText="@string/helper_institution_account"
                app:layoutType="autocomplete"
                app:layout_constraintTop_toBottomOf="@id/date_text_input" />

            <com.savestudents.components.textInput.TextInputCustomView
                android:id="@+id/password_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_password_account"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/institution_text_input"
                app:passwordToggleEnabled="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                style="@style/Theme.Ui.Button"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/register_account"
                app:layout_constraintTop_toBottomOf="@id/password_text_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>