<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ti_event" />

    <com.savestudents.components.textInput.TextInputCustomView
        android:id="@+id/ti_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_add_event"
        app:helperText="@string/helper_add_event"
        app:layout_constraintTop_toTopOf="@id/drag_handle" />

    <TextView
        android:id="@+id/title"
        style="@style/Theme.Ui.Text.Bold.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_date_title"
        app:layout_constraintTop_toBottomOf="@id/ti_event" />

    <com.savestudents.components.datepicker.DatePickerCustomView
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        style="@style/Theme.Ui.Button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/register_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_picker" />
</androidx.constraintlayout.widget.ConstraintLayout>

