<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event.presenter.EventFragment">

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.savestudents.components.textInput.TextInputCustomView
                android:id="@+id/matter_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_search_matter"
                app:helperText="@string/helper_search_matter"
                app:layoutType="autocomplete"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        style="@style/Theme.Ui.Button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/register_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />
</androidx.constraintlayout.widget.ConstraintLayout>