<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".config.ui.ConfigFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_security"
        style="@style/Theme.Ui.Button.Icon"
        android:layout_width="0dp"
        android:text="@string/config_security_button_title"
        app:icon="@drawable/ic_user_lock"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_notification"
        style="@style/Theme.Ui.Button.Icon"
        android:layout_width="0dp"
        android:text="@string/config_notification_button_title"
        app:icon="@drawable/ic_notifications_24"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_security" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_exit"
        style="@style/Theme.Ui.Button.Icon"
        android:layout_width="0dp"
        android:text="@string/config_exit_app_button_title"
        android:textColor="@color/error_primary"
        app:icon="@drawable/ic_exit_app"
        app:iconSize="25dp"
        app:iconTint="@color/error_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_notification" />

</androidx.constraintlayout.widget.ConstraintLayout>