<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp">

        <View
            android:id="@+id/matter_text_input_loading"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_scale_400"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/select_day_title_loading"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_scale_400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/matter_text_input_loading" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/select_day_title_loading">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1_loading"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_matter_chip_monday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2_loading"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_matter_chip_tuesday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3_loading"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_matter_chip_wednesday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4_loading"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_matter_chip_thursday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5_loading"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_matter_chip_friday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip6_loading"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_matter_chip_saturday" />

        </com.google.android.material.chip.ChipGroup>

        <View
            android:id="@+id/select_hour_title_loading"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_scale_400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup_loading" />

        <View
            android:id="@+id/initial_hour_text_layout_loading"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray_scale_400"
            app:layout_constraintEnd_toStartOf="@id/final_hour_text_layout_loading"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_hour_title_loading" />

        <View
            android:id="@+id/final_hour_text_layout_loading"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_scale_400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/initial_hour_text_layout_loading"
            app:layout_constraintTop_toBottomOf="@id/select_hour_title_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.facebook.shimmer.ShimmerFrameLayout>